# kaysolo

./: .dockerignore  .editorconfig  .env  .env.template  Dockerfile  Makefile  README.md  create_database.sh  docker-compose.yml  jwtrs256.sh  package-lock.json  package.json
kaybot/: .env.template  .eslintrc.json  Dockerfile  Dockerfile.development  generate_client.sh  next.config.js  openapi-gen.config.yml  package.json  tsconfig.json
kaybot-services/: .env.template  .gitignore  Dockerfile  export_keys.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  run_migrations.sh
kaybot-services/account/: handlers.py
kaybot-services/alembic/: env.py
kaybot-services/alembic/versions/: 3c94db41da7c_create_inital_tables.py  d092ee7c91f5_create_initial_tables.py
kaybot-services/chat/: api.py  handlers.py
kaybot-services/core/: deps.py  settings.py  utils.py
kaybot-services/core/authentication/: oauth2.py  password.py  token.py
kaybot-services/core/database/: engine.py
kaybot-services/core/exceptions/: code.py  http.py
kaybot-services/core/intelligence/: basic.py
kaybot-services/core/models/: account.py  base.py  user.py
kaybot-services/core/schemas/: __init__.py  account.py  base.py  chat.py  openai.py  user.py
kaybot-services/core/services/: account.py  user.py
kaybot-services/intelligence/: __init__.py  basic.py  personality.py
kaybot-services/schemas/: chat.py  openai.py
kaybot-services/user/: handlers.py
kaybot/app/: globals.css  home.tsx  layout.tsx  page.module.css  page.tsx
kaybot/client/: api.ts  base.ts  (+3 more)
scripts/: jwtrs256.sh
(+72 files in other folders)
